<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D2B48C"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="#D2B48C"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="Kopinya Kita"
            android:textColor="#D2691E"
            android:fontFamily="@font/lobster_regular"
            android:textSize="60dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama Pelanggan"
            android:fontFamily="@font/lobster_regular"
            android:textStyle="bold"
            android:textColor="#D2691E"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="	#FFCCCCFF"
            android:textStyle="bold"
            android:hint="Masukan nama"
            android:id="@+id/edt_name"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/tambahkan_topping"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <CheckBox
            android:id="@+id/WhippedCream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krim"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:textSize="15sp"/>

        <CheckBox
            android:id="@+id/Chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coklat"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:textSize="15sp"/>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pesanan"
            android:textSize="25dp"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Masukan jumlah pesanan"
            android:id="@+id/quantity_textview"
            android:inputType="number"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textColor="#D2691E"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAllCaps="true"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp"
            android:textColor="#D2691E"
            android:id="@+id/price_textview"
            android:textSize="25dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="Submitorder"
            android:layout_height="wrap_content"
            android:background="#D2691E"
            android:text="@string/pesan_sekarang"/>

        <Button
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/pl"
            android:onClick="info"
            android:text="informasi kelompok"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>